--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "chai": "^4.2.0",
     "concurrently": "^4.1.0",
     "coveralls": "^3.0.1",
+    "dotenv": "^8.0.0",
     "eslint": "^4.19.1",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.13.0",
@@ -64,11 +65,7 @@
     "solhint": "2.1.0",
     "solidity-coverage": "github:rotcivegaf/solidity-coverage#5875f5b7bc74d447f3312c9c0e9fc7814b482477",
     "solidity-docgen": "github:OpenZeppelin/solidity-docgen#03f42b5e271b1e1c1d0b814b921ecdc086055255",
-    "truffle": "^5.0.20"
-  },
-  "dependencies": {
-    "dotenv": "^8.0.0",
-    "truffle-hdwallet-provider": "^1.0.10",
-    "web3": "^1.0.0-beta.55"
+    "truffle": "^5.0.20",
+    "truffle-hdwallet-provider": "^1.0.10"
   }
 }
